feat(project): Implement cross-browser support and automated release pipeline
This major overhaul refactors the extension from a simple, Firefox-only add-on to a professional, cross-browser extension with a fully automated CI/CD release process.

The key improvements include:

**1. Cross-Browser Compatibility (Manifest V3):**
- The codebase now uses the `chrome.*` namespace, which is compatible with both Chromium and Firefox's Manifest V3 implementations.
- A build script dynamically generates a Firefox-specific `manifest.json`, adding the required `browser_specific_settings` and a non-service-worker background script definition for full compatibility.
- Content scripts were updated to use `chrome.runtime` for messaging.

**2. Automated Build System:**
- Introduced a Node.js-based build process (`scripts/build.js`) using `fs-extra` and `archiver`.
- The build script reads the version from `package.json` and creates separate, clean distribution packages for 'chromium' and 'firefox' in a `dist/` directory.

**3. CI/CD with GitHub Actions:**
- A new workflow (`.github/workflows/release.yml`) automates the entire release process.
- The workflow triggers on pushing a git tag (e.g., `v1.1.0`).
- It automatically builds the extension, creates versioned ZIP files for both browsers, and publishes them to a new GitHub Release with auto-generated release notes.

**4. Code Architecture Refactor:**
- The logic has been decoupled into three distinct scripts for maintainability, following the single-responsibility principle:
    - `background.js`: The central coordinator.
    - `content-youtube.js`: Detects video playback on YouTube.
    - `content-music.js`: Listens for commands and pauses music on YouTube Music.
- This replaces the previous, less-structured approach where scripts had mixed responsibilities.

**5. Standardized Versioning:**
- Added `package.json` to manage project metadata, dependencies, and versioning.
- The developer can now use `npm version <patch|minor|major>

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 3,
   "name": "YouTube Music Auto-Pauser",
-  "version": "1.0",
-  "description": "Pauses YouTube Music when a regular YouTube video is played in another tab.",
+  "version": "1.0.0",
+  "description": "Automatically pauses YouTube Music when a YouTube video starts playing in another tab.",
 
   "permissions": [
     "tabs",
-    "scripting"
+    "storage"
   ],
 
   "host_permissions": [
@@ -15,18 +15,20 @@
   ],
 
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "src/background.js"
   },
 
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/*"],
-      "js": ["youtube-video-listener.js"],
-      "exclude_matches": ["*://music.youtube.com/*"]
+      "exclude_matches": ["*://music.youtube.com/*"],
+      "js": ["src/content-youtube.js"],
+      "run_at": "document_idle"
     },
     {
       "matches": ["*://music.youtube.com/*"],
-      "js": ["youtube-music-pauser.js"]
+      "js": ["src/content-music.js"],
+      "run_at": "document_idle"
     }
   ]
 }
